Updated imgs to S3, adjusted CSS

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Chill-Crocs/Croxy-Proxy-Christina#readme",
   "dependencies": {
+    "aws-sdk": "^2.834.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
